Fix loader alignments

--- a/src/components/shooting/shooting.component.css
+++ b/src/components/shooting/shooting.component.css
@@ -1,3 +1,8 @@
+.shooting-root {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+}
 .shooting-photos-grid {
     display: -webkit-flex; /* Safari */
     -webkit-flex-wrap: wrap; /* Safari 6.1+ */
@@ -25,4 +30,4 @@
     margin-bottom: 3rem;
     height: 3.5rem;
     width: 3.5rem;
-  }
+}
